feat(frontend): set up layout, header, and footer

--- a/frontend/src/components/Header/styles.scss
+++ b/frontend/src/components/Header/styles.scss
@@ -1,3 +1,30 @@
 .headerContainer {
+  position: fixed;
+  top: 0;
+  height: 50px;
+  width: 100%;
+  background: #242424;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  .headerContent {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 0 20px;
+  }
+
+  .searchContainer {
+    margin-left: 0;
+
+    @media screen and (min-width: 768px) {
+      margin-left: 100px;
+    }
+
+    .search {
+      background: white;
+    }
+  }
 }
