--- a/frontend/src/components/Footer/styles.scss
+++ b/frontend/src/components/Footer/styles.scss
@@ -8,3 +8,15 @@
   align-items: center;
   background: #1a1a1a;
 }
+
+.dark {
+  background: #242424;
+}
+
+.light {
+  background: #f5f5f5;
+
+  p {
+    color: black;
+  }
+}
