--- a/frontend/src/components/Header/styles.scss
+++ b/frontend/src/components/Header/styles.scss
@@ -10,7 +10,7 @@
 
   .headerContent {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     padding: 0 20px;
@@ -25,6 +25,27 @@
 
     .search {
       background: white;
+      color: black;
+
+      @media screen and (min-width: 768px) {
+        width: calc(100vw - 400px);
+      }
     }
+  }
+
+  .themeButton {
+    margin: 0 20px;
+  }
+}
+
+.dark {
+  background: #242424;
+}
+
+.light {
+  background: #f5f5f5;
+
+  p {
+    color: black;
   }
 }
