--- a/frontend/src/components/Header/styles.scss
+++ b/frontend/src/components/Header/styles.scss
@@ -1,19 +1,23 @@
 .headerContainer {
-  position: fixed;
-  top: 0;
+  flex-shrink: 0;
   height: 50px;
   width: 100%;
   background: #242424;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 
   .headerContent {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 100%;
-    padding: 0 20px;
+    padding: 0 1rem;
+
+    h1 {
+      font-size: medium;
+    }
   }
 
   .searchContainer {
@@ -33,8 +37,9 @@
     }
   }
 
-  .themeButton {
-    margin: 0 20px;
+  .headerToggleThemeButton {
+    margin: 0 1rem;
+    cursor: pointer;
   }
 }
 
