--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -17,19 +17,20 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: black;
   cursor: pointer;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: gray;
 }
 
 body {
   margin: 0;
-  display: flex;
   min-width: 100vw;
+  width: 100%;
   min-height: 100vh;
+  height: 100%;
 }
 
 h1 {
@@ -49,22 +50,9 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: black;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
