--- a/frontend/src/components/Movie/styles.scss
+++ b/frontend/src/components/Movie/styles.scss
@@ -8,6 +8,14 @@
   h1, h2 {
     margin: 0;
   }
+  button {
+    border: 1px solid #e3d80b;
+
+    &:hover {
+      background: #e3d80b;
+      color: black;
+    }
+  }
 }
 
 .movieContainer-light {
@@ -159,4 +167,13 @@
     margin: 0;
     margin-left: 10px;
   }
+}
+
+.movieRecommendationsButton {
+  grid-column: 1 / 3;
+}
+
+.movieRecommendations {
+  grid-column: 1 / 3;
+  margin-top: 1rem;
 }
