--- a/frontend/src/components/Header/styles.scss
+++ b/frontend/src/components/Header/styles.scss
@@ -42,7 +42,7 @@
   }
 }
 
-.dark {
+.headerDark {
   background: #242424;
 
   input {
@@ -55,7 +55,7 @@
   }
 }
 
-.light {
+.headerLight {
   background: #f5f5f5;
 
   p {
