--- a/frontend/src/components/Footer/styles.scss
+++ b/frontend/src/components/Footer/styles.scss
@@ -1,20 +1,22 @@
-.footerContainer-dark {
+@mixin theme() {
+  transition: all 0.3s ease;
   flex-shrink: 0;
   height: 50px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.footerContainer-dark {
+  @include theme();
+
   background: #242424;
 }
 
 .footerContainer-light {
-  flex-shrink: 0;
-  height: 50px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include theme();
+
   background: #f5f5f5;
 
   p {
