--- a/frontend/src/components/Header/styles.scss
+++ b/frontend/src/components/Header/styles.scss
@@ -1,3 +1,7 @@
+@mixin theme() {
+  transition: all 0.3s ease;
+}
+
 .headerContainer {
   flex-shrink: 0;
   height: 50px;
@@ -43,7 +47,10 @@
 }
 
 .headerDark {
+  @include theme();
+
   background: #242424;
+  transition: background-color 0.3s ease, color 0.3s ease;
 
   input {
     border: 0;
@@ -56,6 +63,7 @@
 }
 
 .headerLight {
+  @include theme();
   background: #f5f5f5;
 
   p {
