--- a/frontend/src/components/Layout/styles.scss
+++ b/frontend/src/components/Layout/styles.scss
@@ -1,8 +1,14 @@
-.layoutContainer-dark {
+@mixin theme() {
+  transition: all 0.3s ease;
   display: flex;
   flex-direction: column;
   height: 100vh;
   width: 100%;
+}
+
+.layoutContainer-dark {
+  @include theme();
+
   background: #1a1a1a;
 
   a {
@@ -15,10 +21,8 @@
 }
 
 .layoutContainer-light {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  width: 100%;
+  @include theme();
+
   background: white;
 
   p {
