--- a/frontend/src/components/Header/styles.scss
+++ b/frontend/src/components/Header/styles.scss
@@ -1,8 +1,5 @@
 @mixin theme() {
   transition: all 0.3s ease;
-}
-
-.headerContainer {
   flex-shrink: 0;
   height: 50px;
   width: 100%;
@@ -11,42 +8,9 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-  .headerContent {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-    padding: 0 1rem;
-
-    h1 {
-      font-size: medium;
-    }
-  }
-
-  .searchContainer {
-    margin-left: 0;
-
-    .search {
-      background: white;
-      color: black;
-      padding: 0.5rem;
-      border-radius: 0.5rem;
-      width: calc(100vw - 10rem);
-
-      @media screen and (min-width: 768px) {
-        width: calc(100vw - 25rem);
-      }
-    }
-  }
-
-  .headerToggleThemeButton {
-    margin: 0 1rem;
-    cursor: pointer;
-  }
 }
 
-.headerDark {
+.headerContainer-dark {
   @include theme();
 
   background: #242424;
@@ -62,8 +26,9 @@
   }
 }
 
-.headerLight {
+.headerContainer-light {
   @include theme();
+
   background: #f5f5f5;
 
   p {
@@ -79,4 +44,37 @@
     border: 2px solid #e3d80b;
     outline: none;
   }
+}
+
+.headerContent {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  padding: 0 1rem;
+
+  h1 {
+    font-size: medium;
+  }
+}
+
+.searchContainer {
+  margin-left: 0;
+
+  .search {
+    background: white;
+    color: black;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    width: calc(100vw - 10rem);
+
+    @media screen and (min-width: 768px) {
+      width: calc(100vw - 25rem);
+    }
+  }
+}
+
+.headerToggleThemeButton {
+  margin: 0 1rem;
+  cursor: pointer;
 }
