--- a/frontend/src/components/MovieItem/styles.scss
+++ b/frontend/src/components/MovieItem/styles.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   cursor: pointer;
+  animation: appear 1s 0s ease-in-out;
 
   .movieItemPoster img {
     width: 50px;
@@ -23,5 +24,14 @@
     .movieItemYear {
       margin: 0;
     }
+  }
+}
+
+@keyframes appear {
+  0% {
+    transform: translateX(-1000px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
