--- a/frontend/src/components/Movie/styles.scss
+++ b/frontend/src/components/Movie/styles.scss
@@ -1,19 +1,47 @@
 .movieContainer-dark {
   display: grid;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+
   @media screen and (min-width: 768px) {
     grid-template-columns: auto 2fr;
     gap: 5px;
   }
+
   h1, h2 {
     margin: 0;
   }
+
   button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    transition: all .3s;
+    z-index: 1;
     border: 1px solid #e3d80b;
+    background: #e3d80b;
+    position: relative;
+    color: #1a1a1a;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 100%;
+      background-color: lighten(#e3d80b, 15%);
+      transition: all .3s;
+      border-radius: 8px;
+      z-index: -1;
+    }
 
     &:hover {
-      background: #e3d80b;
-      color: black;
+      color: #1a1a1a;
+
+      &:before {
+        width: 100%;
+      }
     }
   }
 }
@@ -29,6 +57,40 @@
   h1, h2 {
     margin: 0;
     color: #1a1a1a;
+  }
+
+  button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    transition: all .3s;
+    z-index: 1;
+    background: #f5f5f5;
+    position: relative;
+    border: 1px solid #e3d80b;
+    color: #1a1a1a;
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0%;
+      height: 100%;
+      background-color: #e3d80b;
+      transition: all .3s;
+      border-radius: 8px;
+      z-index: -1;
+    }
+
+    &:hover {
+      color: black;
+
+      &:before {
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -172,8 +234,12 @@
 .movieRecommendationsButton {
   grid-column: 1 / 3;
 
-  button {
-    width: 100%;
+  svg {
+    margin-right: 0.5rem;
+  }
+
+  p {
+    margin: 0;
   }
 }
 
