build(frontend): update dependencies

--- a/frontend/src/components/Movie/styles.scss
+++ b/frontend/src/components/Movie/styles.scss
@@ -30,7 +30,7 @@
       left: 0;
       width: 0%;
       height: 100%;
-      background-color: lighten(#e3d80b, 15%);
+      background-color: #d1cc64;
       transition: all .3s;
       border-radius: 8px;
       z-index: -1;
